@@ -63,6 +63,7 @@
 <!ATTLIST Patch compressionType CDATA #IMPLIED>
 <!ATTLIST Patch level CDATA #IMPLIED>
 <!ATTLIST Patch target CDATA #IMPLIED>
+<!ATTLIST Patch reverse CDATA #IMPLIED>
 
 
 <!-- Package Section -->
