@@ -613,6 +613,7 @@ class Builder:
         for patch in self.spec.source.patches:
             patchFile = pisi.util.join_path(files_dir, patch.filename)
             relativePath = patch.filename
+            reverseApply = patch.reverse.lower() == "true"
             if patch.compressionType:
                 patchFile = pisi.util.uncompress(patchFile,
                                             compressType=patch.compressionType,
@@ -620,7 +621,7 @@ class Builder:
                 relativePath = relativePath.rsplit(".%s" % patch.compressionType, 1)[0]
 
             ctx.ui.action(_("* Applying patch: %s") % patch.filename)
-            pisi.util.do_patch(self.srcDir, patchFile, level=patch.level, name=relativePath)
+            pisi.util.do_patch(self.srcDir, patchFile, level=patch.level, name=relativePath, reverse=reverseApply)
         return True
 
     def generate_static_package_object(self):
